kubernetes/yaml/hashstrings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashstrings
  namespace: hashstrings
spec:
  type: NodePort
  selector:
    app: hashstrings
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
