kubernetes/yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
spec:
  type: ClusterIP
  selector:
    app: redis-server
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
