kubernetes/yaml/hashstrings-ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "hashstrings"
  namespace: "hashstrings"
spec:
  defaultBackend:
    service:
      name: "hashstrings"
      port:
        number: 8080
status:
  loadBalancer: {}
